--- a/twitch/settings.json
+++ b/twitch/settings.json
@@ -6,8 +6,7 @@
         "refreshinterval": 60
     },
     "twitch": {
-        "honorclear": false,
-        "mydotmsg": "warn"
+        "honorclear": false
     },
     "usertypes": {
         "admin": {
