fix spurious characters at the ends of some messages

--- a/twitch/settings.json
+++ b/twitch/settings.json
@@ -25,7 +25,7 @@
             "format": "%B{}"
         },
         "mod": {
-            "badge": "%C(green)🔪",
+            "badge": "%C(green)🔪"
         },
         "staff": {
             "badge": "%C(pink)🔧%B",
